--- a/02. Phase 1 - Analysis and definition/2.1 Meeting n°1 : Project Charter framing and BRD draft meeting/2.1.4 Risk-and-Impact-Analysis.md
+++ b/02. Phase 1 - Analysis and definition/2.1 Meeting n°1 : Project Charter framing and BRD draft meeting/2.1.4 Risk-and-Impact-Analysis.md
@@ -20,13 +20,32 @@ This Risk and Impact Analysis provides a structured view of:
 
 ## Consolidated Risk Analysis Table
 
-| **Risk ID** | **Business Process** | **System(s)** | **Risk Description** | **Impact** | **Probability** | **Risk Level** | **Mitigation (IAM Control)** | **Linked BR ID** |
-|--------------|----------------------|----------------|----------------------|-------------|------------------|----------------|------------------------------|------------------|
-| **R-001** | Appointment Scheduling | DXPlanning | Unauthorized or erroneous scheduling (wrong patient, double booking) due to lack of access control and traceability. | High | Medium | 🟧 High | Role-based provisioning and access audit (IGA) | BR-001, BR-002 |
-| **R-002** | Appointment Scheduling / Integration | DXPlanning ↔ OASIS+ ↔ QBLOC | Technical service accounts used for HL7 exchanges are unmanaged, shared, or reused without traceability, leading to data integrity or confidentiality breaches. | High | Medium | 🟥 Critical | Vaulting and monitoring of HL7 accounts (PAM) | BR-003 |
-| **R-003** | Patient Admission | OASIS+ | Reception staff accessing full patient medical records without consent, violating GDPR minimization principle. | High | Medium | 🟧 High | Context-aware access (IDP) + field-level access limitation (IGA) | BR-004, BR-005 |
-| **R-004** | Surgery Planning | QBLOC | Unauthorized modification of surgical schedules or clinical resources due to lack of delegation traceability. | Critical | Low | 🟥 Critical | Role delegation and session recording (IGA + PAM) | BR-006, BR-007 |
-| **R-005** | Prescription & eHealth | ePrescription / eHealth | Prescription issued without validated therapeutic link or digital signature, exposing the hospital to legal and patient safety risks. | Critical | Low | 🟥 Critical | eID-based strong authentication (IDP + IGA) and privileged backend control (PAM) | BR-008, BR-009 |
+| Risk ID | Business process              | Systems       | Risk description                                                                                   | Impact | Probability | Risk level | Mitigation (IAM Control)                                                                   | Linked BR ID |
+| ------- | ----------------------------- | ------------- | -------------------------------------------------------------------------------------------------- | ------ | ----------- | ---------- | ------------------------------------------------------------------------------------------ | ------------ |
+| **R-001**   | **Provisioning & deprovisioning** | IAM, AD, HRIS | Orphan accounts or delayed deprovisioning leading to unauthorized access after employee departure. | High   | Medium      | High       | Automate JML lifecycle, enforce journaling, HR-IAM API sync, weekly orphan account review. | BR-01        |
+| R-002   | Provisioning & deprovisioning | IAM           | Excessive permissions granted due to role creep and inconsistent RBAC management.                  | Medium | Medium      | Medium     | Implement RBAC model, periodic certification, SoD matrix.                                  | BR-04        |
+| R-003   | Provisioning & deprovisioning | IAM, AD       | Shared or generic accounts used for critical tasks without identity traceability.                  | High   | Medium      | High       | Enforce MFA + disable shared accounts + issue personal credentials.                        | BR-03        |
+| R-004   | Provisioning & deprovisioning | IAM           | Lack of SoD controls enabling privilege accumulation.                                              | High   | Low         | Medium     | Implement SoD Matrix, continuous control, enforce segregation in roles.                    | BR-04        |
+| **R-101**   | **Appointment scheduling** | DxPlanning     | Unauthorized or erroneous scheduling (wrong patient, double booking) due to lack of authentication and traceability. | Medium | High        | High       | Enforce authentication, audit logs, MFA for secretaries.                                       | BR-02        |
+| R-102   | Appointment scheduling | DxPlanning     | Unauthenticated access allowing wrong appointments, unauthorized changes, no audit trail. *(BPMN AS IS)*             | Medium | High        | High       | IAM authentication, role-based access, full audit logs.                                        | BR-02        |
+| R-103   | Appointment scheduling | HL7 interfaces | Unmanaged HL7 service accounts create confidentiality/integrity risks.                                               | High   | Medium      | High       | Vault service accounts, rotate secrets, enforce API authentication.                            | BR-06        |
+| R-104   | Appointment scheduling | DxPlanning     | ISO 27799 threats: unauthorized use of application, user error, repudiation, masquerade by insiders.                 | High   | Medium      | High       | Strong authentication, least privilege, verify identity, enable non-repudiation (signed logs). | BR-02        |
+| **R-201**   | **Patient admission** | OASIS+  | Reception staff accessing full medical records without consent → GDPR violation.         | High   | High        | High       | Attribute-based access (ABAC), contextual restrictions, data minimization rules. | BR-05        |
+| R-202   | Patient admission | OASIS+  | Wrong patient file opened due to lack of authentication & no restrictions *(BPMN AS IS)* | High   | Medium      | High       | Enforce patient search validation, traceability, authentication.                 | BR-05        |
+| R-203   | Patient admission | OASIS+  | No audit logs → no accountability for viewed/modified patient data.                      | High   | High        | High       | Enable journaling, enforce accountability, monitoring alerts.                    | BR-07        |
+| R-204   | Patient admission | OASIS+  | ISO 27799 threats: unauthorized use, masquerade, interception, repudiation.              | High   | Medium      | High       | Enforce MFA, encrypted channels, identity verification, tamper-proof logs.       | BR-05        |
+| **R-301**   | **Surgery planning** | QBLOC   | Unauthorized modification of surgery schedules due to lack of validation and traceability. *(BPMN AS IS)* | High   | Medium      | High       | RBAC roles (surgeon, anesthetist, coordinator), approval workflow, audit logs. | BR-08        |
+| R-302   | Surgery planning | QBLOC   | Shared accounts enabling impersonation and no accountability.                                             | High   | Medium      | High       | Enforce personal accounts, MFA, remove shared passwords.                       | BR-03        |
+| R-303   | Surgery planning | QBLOC   | Incorrect resource allocation (operating room, surgeon) impacting patient safety.                         | High   | Medium      | High       | Implement validation steps, SoD, approval rules.                               | BR-08        |
+| R-304   | Surgery planning | QBLOC   | ISO 27799 threats: repudiation, user error, masquerade by insiders, operator error.                       | High   | Medium      | High       | Digital signature for approvals, audit logs, user training.                    | BR-08        |
+| **R-401**   | **Medication prescription** | OASIS+, eHealth | Prescription issued without validated therapeutic link or digital signature.                 | High   | Medium      | High       | Verify therapeutic link via eHealth API, enforce signing with eID/MFA. | BR-09        |
+| R-402   | Medication prescription | OASIS+          | Manual validation & lack of strong authentication *(BPMN AS IS)* → prescription safety risk. | High   | Medium      | High       | Mandatory MFA, ABAC rules, secure API link.                            | BR-09        |
+| R-403   | Medication prescription | OASIS+          | Lack of traceability for issued prescriptions.                                               | Medium | Medium      | Medium     | Enable e-prescription logs, journaling, SIEM integration.              | BR-07        |
+| R-404   | Medication prescription | OASIS+, eHealth | ISO 27799 threats: masquerade, user error, repudiation, communication interception.          | High   | Medium      | High       | Secure channel (TLS), identity proofing, digital signature, MFA.       | BR-09        |
+| **R-501**   | **Emergency access** | OASIS+, AD, IAM | Break-glass accounts granting uncontrolled access without time limits. | High   | Low         | Medium     | Just-in-time access, session recording, auto-expiration. | BR-10        |
+| **R-601**   | **Research environments** | AD, isolated VMs | Researchers accessing production data instead of anonymized datasets. | High   | Medium      | High       | ABAC, environment segregation, anonymization layers. | BR-11        |
+| **R-701**   | **Contractor access** | AD, IAM | Temporary contractors receive permanent or excessive access. | High   | Medium      | High       | Time-bound access, auto-expiry, approval workflows. | BR-12        |
+| R-702   | Contractor access | AD      | External access without MFA or identity proofing.            | High   | Medium      | High       | Enforce MFA, identity verification, JIT sessions.   | BR-12        |
 
 
 ---
@@ -71,3 +90,6 @@ The adoption of **SailPoint, Okta, and Wallix** significantly reduces these expo
 This analysis serves as the foundation for:
 - the **Business Requirements (Section 3.3)**, and  
 - the **Risk Register**, a living artifact continuously updated through the project lifecycle.
+
+
+
