--- a/02. Phase 1 - Analysis and definition/2.1 Meeting n°1 : Project Charter framing and BRD draft meeting/2.1.2 IAM-Solution-Mapping.md
+++ b/02. Phase 1 - Analysis and definition/2.1 Meeting n°1 : Project Charter framing and BRD draft meeting/2.1.2 IAM-Solution-Mapping.md
@@ -63,7 +63,7 @@ By applying these Zero Trust principles, CHR Brussels ensures that every user, d
 | **5. Medication prescription & Therapeutic link verification** | ePrescription, OASIS +| Identity lifecycle linked to prescriber roles, role certifications| MFA and digital signature orchestration | Vaulted access to API and backend servers |
 |**6. Priority & immediate Access for emergency Doctors** | DXPlanning, OASIS+, QBLOC| Temporary elevated roles with time-bound access workflows| Real-time adaptative authentication, context enforced emergency policy | Session monitoring and audit of emergency privileged access|
 | **7. Secure Access to segregated environments for researchers** | Research Environment Systems| Role and access segregation support, data access recertification| Enforced context-aware authentication, stricter policies for research network zones | restricts and audits privileged user sessions in production vs research environments| 
-|**8.Temporary Access for exterbal contractors** | Various | Time-limited provisioning and deprovisioning | Enforced strong, authentication, limited session duration| privileged session vaulting and recorded access during maintenance/support windows|
+|**8.Temporary Access for external contractors** | Various | Time-limited provisioning and deprovisioning | Enforced strong, authentication, limited session duration| privileged session vaulting and recorded access during maintenance/support windows|
 
 
 ---
