--- a/02. Phase 1 - Analysis and definition/2.1 Meeting n°1 : Project Charter framing and BRD draft meeting/2.1.3 Business-Requirements-Matrix.md
+++ b/02. Phase 1 - Analysis and definition/2.1 Meeting n°1 : Project Charter framing and BRD draft meeting/2.1.3 Business-Requirements-Matrix.md
@@ -1,7 +1,7 @@
 # Business Requirements Matrix
 
 ## Objective
-This section consolidates the business requirements derived from the IAM Solution Mapping (Section 3.3) and the Risk Analysis (Section 3.2).  
+This section consolidates the business requirements derived from the IAM Solution Mapping (Section 2.1.2) and the Risk Analysis (Section 2.1.4).  
 Each requirement ensures secure, compliant, and traceable management of identities and access rights within CHR Brussels’ hospital systems.
 
 ---
@@ -31,10 +31,10 @@ Each requirement ensures secure, compliant, and traceable management of identiti
 
 | **Requirement Source** | **Linked Output** | **Document / Tool** |
 |-------------------------|------------------|---------------------|
-| Risk Analysis (3.2) | Business Requirements | This section (3.4) |
-| Business Requirements | Test Scenarios | UAT Scripts (Section 8.2) |
-| Business Requirements | Compliance Validation | RTM (Section 8.4) |
-| Business Requirements | Post-GoLive KPIs | Governance Metrics (Section 10) |
+| Risk Analysis (3.2) | Business Requirements | This section (2.1.4) |
+| Business Requirements | Test Scenarios | UAT Scripts (Section 4.3.2) |
+| Business Requirements | Compliance Validation | RTM |
+| Business Requirements | Post-GoLive KPIs | Governance Metrics (Section 6.2) |
 
 ---
 
