--- a/02. Phase 1 - Analysis and definition/2.1 Meeting n°1 : Project Charter framing and BRD draft meeting/2.1.5 Risk-Matrix-Visualization.md
+++ b/02. Phase 1 - Analysis and definition/2.1 Meeting n°1 : Project Charter framing and BRD draft meeting/2.1.5 Risk-Matrix-Visualization.md
@@ -1,19 +1,64 @@
-# Risk Matrix – Impact vs Probability
+# 📊 Risk Matrix – Impact vs Probability
 
-| **Impact ↓** / **Probability →** | **Low** | **Medium** | **High** |
-|----------------------------------|----------|-------------|-----------|
-| **Critical** | 🟥 R-004, R-005 | 🟥 R-003 | — |
-| **High** | — | 🟧 R-001, R-002 | — |
-| **Medium** | — | — | — |
-| **Low** | — | — | — |
+## Risk Matrix Table
 
-**Legend:**  
-🟥 = Critical risk — requires immediate IAM controls (IGA / IDP / PAM).  
-🟧 = High risk — to be mitigated through process and access role improvements.  
-🟨 = Medium risk — can be monitored or accepted after IAM rollout.  
-🟩 = Low risk — negligible impact.
+| **Risk ID** | **Business Process**                                           | **Risk Description**                                                            | **Impact** | **Probability** | **Risk Level** |
+| ----------- | -------------------------------------------------------------- | ------------------------------------------------------------------------------- | ---------- | --------------- | -------------- |
+| **R1**      | Appointment Scheduling (DXPlanning)                            | Unauthorized use of DxPlanning / unauthenticated users scheduling appointments  | Medium     | High            | **High**       |
+| **R2**      | Appointment Scheduling – HL7 Accounts                          | Misuse of technical HL7 accounts (shared, unmanaged)                            | High       | Medium          | **High**       |
+| **R3**      | Patient Admission (OASIS+)                                     | Reception staff accessing full patient info without minimization / GDPR breach  | Critical   | Medium          | **High**       |
+| **R4**      | Patient Admission                                              | Accidental access to wrong patient file / no logs                               | Medium     | High            | **High**       |
+| **R5**      | Surgery Planning (QBLOC)                                       | Unauthorized modification of surgical schedules (no validation, no audit trail) | Critical   | Medium          | **High**       |
+| **R6**      | Surgery Planning                                               | Incorrect patient or resource allocation impacting surgery                      | Critical   | Low             | **Medium**     |
+| **R7**      | Medication Prescription                                        | Prescription issued without validated therapeutic link                          | Critical   | Medium          | **High**       |
+| **R8**      | Medication Prescription                                        | Prescription without authentication or digital signature (repudiation risk)     | High       | Medium          | **High**       |
+| **R9**      | Emergency Access                                               | Emergency doctor using elevated access without proper tracking                  | High       | Medium          | **High**       |
+| **R10**     | Researcher Access                                              | Access to a segregated environment without proper identity verification         | High       | Low             | **Medium**     |
+| **R11**     | External Contractors                                           | Temporary contractor access remaining active too long (dormant risk)            | High       | Medium          | **High**       |
+| **R12**     | ISO27799 – Masquerade (Insiders)                               | Staff impersonating legitimate users                                            | Critical   | Medium          | **High**       |
+| **R13**     | ISO27799 – Unauthorized Use of Application                     | Any hospital application used by unauthorized actor                             | Critical   | High            | **Critical**   |
+| **R14**     | ISO27799 – Communications Interception                         | HL7, APIs or network traffic intercepted                                        | High       | Medium          | **High**       |
+| **R15**     | ISO27799 – Repudiation                                         | User denies creating prescription or modifying a schedule                       | High       | Medium          | **High**       |
+| **R16**     | ISO27799 – Operator / User Error                               | Incorrect data entry affecting patient care                                     | Medium     | High            | **High**       |
+| **R17**     | ISO27799 – Theft of device or workstation (insiders/outsiders) | Device theft causing patient data exposure                                      | High       | Low             | **Medium**     |
+___
 
-**Interpretation:**  
-- Most high-impact risks fall within the *Critical* impact category, even when their probability is low to medium.  
-- This pattern reflects healthcare reality: even rare incidents (surgery data change, prescription misuse) can have life-critical consequences.  
-- IAM measures therefore target *impact reduction* and *traceability enhancement*, not only probability reduction.
+## Legend
+
+L = Low
+M = Medium
+H = High
+C = Critical
+____
+
+## 🟩🟨🟧🟥 Visual Matrix (Heatmap Style)
+
+| **Impact ↓ / Probability →** | **Low**  | **Medium**                | **High** |
+| ---------------------------- | -------- | ------------------------- | -------- |
+| **Critical**                 | R6       | R3, R5, R7, R12           | **R13**  |
+| **High**                     | R10, R17 | R2, R8, R9, R11, R14, R15 | R1, R4   |
+| **Medium**                   | –        | R16                       | –        |
+| **Low**                      | –        | –                         | –        |
+
+___
+
+## Interpretation
+### Highest risks (Critical zone – must be addressed first)
+
+- R13 – Unauthorized use of health information applications
+→ Direct linkage to ISO27799 + GDPR + patient safety.
+
+### High risks (priority for IAM controls)
+
+- Appointment scheduling without authentication
+- Full-file access during patient admission
+- Prescription without therapeutic link
+- Surgery schedule modification without traceability
+- Contractor access not revoked
+- Emergency access without audit
+
+### Medium risks (address with policies / technical safeguards)
+
+- Incorrect scheduling or resource allocation
+- Research environment misuses
+- Theft of devices
