--- a/02. Phase 1 - Analysis and definition/2.1 Meeting n°1 : Project Charter framing and BRD draft meeting/2.1.5 Risk-Matrix-Visualization.md
+++ b/02. Phase 1 - Analysis and definition/2.1 Meeting n°1 : Project Charter framing and BRD draft meeting/2.1.5 Risk-Matrix-Visualization.md
@@ -21,14 +21,6 @@
 | **R15**     | ISO27799 – Repudiation                                         | User denies creating prescription or modifying a schedule                       | High       | Medium          | **High**       |
 | **R16**     | ISO27799 – Operator / User Error                               | Incorrect data entry affecting patient care                                     | Medium     | High            | **High**       |
 | **R17**     | ISO27799 – Theft of device or workstation (insiders/outsiders) | Device theft causing patient data exposure                                      | High       | Low             | **Medium**     |
-___
-
-## Legend
-
-L = Low
-M = Medium
-H = High
-C = Critical
 ____
 
 ## 🟩🟨🟧🟥 Visual Matrix (Heatmap Style)
@@ -41,6 +33,39 @@ ____
 | **Low**                      | –        | –                         | –        |
 
 ___
+
+## Legend and Assessment assumptions 
+### Impact levels (vertical axis) 
+Impact is evaluated qualitatively based on the potential consequences of the risk on clinical operations, patient safety, regulatory compliance, and data confidentiality.
+
+| Level            | Definition                                                                                                 |
+| ---------------- | ---------------------------------------------------------------------------------------------------------- |
+| **1 – Very Low** | Minor disruption, no patient impact, no sensitive data exposure.                                           |
+| **2 – Low**      | Limited operational disruption, minimal data exposure.                                                     |
+| **3 – Medium**   | Noticeable operational impact, exposure of non-critical health data, minor compliance deviation.           |
+| **4 – High**     | Significant disruption, potential impact on patient care, exposure of sensitive data, GDPR non-compliance. |
+| **5 – Critical** | Severe patient safety risk, major operational breakdown, large-scale data breach, legal consequences.      |
+
+### Probability levels (horizontal axis)
+Probability reflects the likelihood of occurrence based on current (AS-IS) controls, workflow maturity, and historical incidents in healthcare environments.
+
+| Level                 | Definition                                                      |
+| --------------------- | --------------------------------------------------------------- |
+| **1 – Very unlikely** | Rare occurrence, strong existing controls.                      |
+| **2 – Unlikely**      | Could occur but not expected under normal conditions.           |
+| **3 – Possible**      | Occurs occasionally; process weaknesses exist.                  |
+| **4 – Likely**        | Has occurred or is expected to occur frequently.                |
+| **5 – Very likely**   | High recurrence rate; lack of controls makes it almost certain. |
+
+### Risk level calculation 
+Risk level = **Impact x Probability** 
+
+Color coding: 
+
+- 🟥 High risk (≥ 16) → Action required immediately
+- 🟧 Medium risk (9–15) → Priority treatment
+- 🟨 Low risk (4–8) → Mitigate progressively
+- 🟩 Very low (< 4) → Monitor
 
 ## Interpretation
 ### Highest risks (Critical zone – must be addressed first)
