--- a/02. Phase 1 - Analysis and definition/2.1 Meeting n°1 : Project Charter framing and BRD draft meeting/2.1.5 Risk-Matrix-Visualization.md
+++ b/02. Phase 1 - Analysis and definition/2.1 Meeting n°1 : Project Charter framing and BRD draft meeting/2.1.5 Risk-Matrix-Visualization.md
@@ -87,3 +87,32 @@ Color coding:
 - Incorrect scheduling or resource allocation
 - Research environment misuses
 - Theft of devices
+___
+
+## Glossary of key terms 
+
+**ABAC (Attribute-Based Access Control)** : Access based on user attributes (role, department, location, device).
+
+**RBAC (Role-Based Access Control)** : Access based on predefined roles aligned with job functions.
+
+**PBAC (Policy-Based Access Control)** : Dynamic access decisions based on contextual rules and policies.
+
+**IGA (Identity Governance & Administration)** :IAM capability managing identity lifecycle, roles, certification, SoD.
+
+**IDP (Identity Provider)** : Central platform for authentication, SSO, MFA (e.g., Okta).
+
+**PAM (Privileged Access Management)** : Controls and monitors privileged accounts (e.g., Wallix).
+
+**Therapeutic Link** : Official verification ensuring a doctor has a legitimate relation with a patient before accessing or prescribing.
+
+**SoD (Separation of Duties)** : Ensuring critical actions cannot be performed by one person without validation.
+
+**Likelihood / Probability** : Estimated chance that a risk materializes.
+
+**Impact** : Consequences of a risk on operations, patient safety, compliance.
+
+**HL7**: Standard for exchanging medical data between hospital systems.
+
+**Audit Trail** : Trace of all user actions for accountability.
+
+**Masquerading (ISO 27799)**: When an attacker impersonates a legitimate user or system.
