--- a/02. Phase 1 - Analysis and definition/2.1 Meeting n°1 : Project Charter framing and BRD draft meeting/2.1.8 IAM Success Metrix.md
+++ b/02. Phase 1 - Analysis and definition/2.1 Meeting n°1 : Project Charter framing and BRD draft meeting/2.1.8 IAM Success Metrix.md
@@ -1,1 +1,79 @@
+# IAM Success Metrics 
+## 1. Objectives / Purpose 
+
+The purpose of the IAM Success Metrics section is to define how the effectiveness of the SailPoint, Okta, Wallix implementation will be measured throughout the project lifecycle and after go-live.
+These metrics ensure that the IAM transformation delivers measurable improvements in:
+
+- **Security posture** (NIS2, ISO 27001, ISO 27799, GDPR)
+- **Operational efficiency** (automation, reduced workload, reduced onboarding delays)
+- **User experience** (simplified and secured access for clinical staff)
+- **Governance and auditability** (traceability, compliance reporting, SoD controls)
+
+This section acts as a baseline for steering, and as a validation framework for the client and stakeholders to confirm that the IAM program meets business expectations.
+
+## 2. IAM Consultant Approach 
+To design robust and measurable IAM success KPIs, the consulting team applies the following methodology:
+
+### Step 1 – Identify Business Drivers
+
+Link each KPI to one of the drivers established in the BRD:
+
+- Patient safety
+- Regulatory compliance
+- Operational continuity
+- Data minimization
+- Audit traceability
+
+### Step 2 - Map Drivers → IAM Capabilities
+
+Ensure each driver is connected to: 
+
+- Identity Governace (SailPoint)
+- Authentication & Federation (Okta)
+- Privileged Access Management (Wallix)
+
+### Step 3 - Define SMART metrics 
+Each KPI follows the SMART structure: 
+- Specific
+- Measurable
+- Achievable
+- Relevant
+- Time-bound
+
+### Step 4 - Establish Validation Method
+
+For each metric, define: 
+
+- Measurement source (logs, dashboards, audi reports, certification results)
+- Validation process (monthly review, quarterly governance committee, annual audit)
+
+ ### Step 5 - align KPIs with Compliance Requirements
+ Cross-reference the KPIs with: 
+
+ - ISO 27001 Annex A controls
+ - NIS2 requirements
+ - ISO27799 sector-specific requirements
+ - Belgian eHealth integration standards
+
+## 3. IAM success metrics table 
+### Success Criteria Overview
+
+| **Category**                                        | **Success Criteria**                                                              | **Measurement / KPI**                               | **Target**                        | **Validation Method**                      |
+| --------------------------------------------------- | --------------------------------------------------------------------------------- | --------------------------------------------------- | --------------------------------- | ------------------------------------------ |
+| **Identity Governance (IGA – SailPoint)**           | Automated provisioning and deprovisioning of all users from HRIS (ULIS, Foederis) | % of automated vs manual identity creation          | ≥ 95% automation                  | Audit of HRIS ↔ SailPoint integration logs |
+|                                                     | Access recertification process implemented for all clinical roles                 | % of roles reviewed quarterly                       | 100% of clinical & admin roles    | SailPoint compliance reports               |
+|                                                     | Separation of Duties (SoD) controls active                                        | Number of SoD violations detected                   | ≤ 3 residual violations / quarter | SoD violation reports                      |
+| **Authentication & Access Management (IDP – Okta)** | MFA enforced on all clinical and administrative users                             | % of users with active MFA                          | 100%                              | Okta policy compliance dashboard           |
+|                                                     | eID-based authentication successfully federated with eHealth platform             | Successful authentication rate                      | ≥ 99%                             | Integration test reports                   |
+|                                                     | Context-aware access implemented for OASIS+ (location, device)                    | % of access requests evaluated by adaptive policies | ≥ 95%                             | Okta risk scoring logs                     |
+| **Privileged Access Management (PAM – Wallix)**     | All privileged accounts (human & technical) vaulted                               | % of privileged accounts managed by PAM             | 100%                              | PAM inventory & vaulting reports           |
+|                                                     | HL7 service accounts monitored                                                    | % of HL7 integrations under PAM control             | 100%                              | Wallix session audit reports               |
+|                                                     | Privileged sessions recorded and traceable                                        | % of critical admin actions recorded                | 100%                              | Session playback verification              |
+| **Compliance & Governance**                         | GDPR compliance – Data minimization enforced                                      | % of OASIS+ fields restricted to role               | 100%                              | Functional test audit                      |
+|                                                     | NIS2 / ISO 27001 control coverage achieved                                        | Number of applicable controls implemented           | 100%                              | Compliance matrix validation               |
+|                                                     | Audit logs centralized and retained                                               | Retention duration in days                          | ≥ 365 days                        | SIEM / PAM / IGA log retention check       |
+
+
+
+
 
