Update 2.1.8 IAM Success Metrix.md

--- a/02. Phase 1 - Analysis and definition/2.1 Meeting n°1 : Project Charter framing and BRD draft meeting/2.1.8 IAM Success Metrix.md
+++ b/02. Phase 1 - Analysis and definition/2.1 Meeting n°1 : Project Charter framing and BRD draft meeting/2.1.8 IAM Success Metrix.md
@@ -74,6 +74,60 @@ For each metric, define:
 |                                                     | Audit logs centralized and retained                                               | Retention duration in days                          | ≥ 365 days                        | SIEM / PAM / IGA log retention check       |
 
 
+## 4. IAM Success Metrics - Dashboard Overview 
 
+The purpose of this dashboard is to provide a concise overview of the key performance indicators for the IAM programme IGA (SailPoint), IDP (Okta), PAM (Wallix) that can be consulted at a glance.
+This format facilitates:
+
+- communication with management,
+- justification of IAM design decisions,
+- demonstration of programme maturity,
+- assessment of the path to compliance (GDPR, NIS2, ISO 27001, ISO 27799).
+
+The dashboard below is based on the KPIs of the success matrix, but translates them into a visual format, classified into three statuses:
+
+🟩 On Track – target achieved or ahead of schedule
+🟨 At Risk – partial progress, risk identified
+🟥 Critical – off target, immediate action required
+
+
+### IAM Success metrics - Visual dashboard 
+
+Legend :
+🟩 = ≥ 95% | 🟨 = 70–94% | 🟥 = <70%
+
+### 1. Identity Governance - SailPoint
+
+| KPI                                   | Status | Current     | Target |
+| ------------------------------------- | ------ | ----------- | ------ |
+| Automated provisioning/deprovisioning | 🟩     | 96%         | 95%    |
+| Access recertification coverage       | 🟨     | 82%         | 100%   |
+| SoD violations resolved               | 🟩     | 2 / quarter | ≤ 3    |
+| HR → IGA attribute completeness       | 🟩     | 98%         | 95%    |
+
+### 2. Authentication and Access Management - Okta 
+
+| KPI                                     | Status | Current | Target |
+| --------------------------------------- | ------ | ------- | ------ |
+| MFA enrollment                          | 🟩     | 100%    | 100%   |
+| eID authentication success rate         | 🟩     | 99.4%   | ≥ 99%  |
+| Context-aware policies applied (OASIS+) | 🟨     | 90%     | 95%    |
+| Legacy authentication removal           | 🟥     | 40%     | 100%   |
+
+### 3. Privileged Access-Management - Wallix 
+| KPI                                              | Status | Current | Target |
+| ------------------------------------------------ | ------ | ------- | ------ |
+| Privileged accounts vaulted                      | 🟩     | 100%    | 100%   |
+| HL7 service accounts onboarded                   | 🟨     | 88%     | 100%   |
+| Privileged sessions recorded                     | 🟩     | 100%    | 100%   |
+| Segregated environments (Prod/Research) enforced | 🟨     | 75%     | 100%   |
+
+### 4. Compliance Governance 
+| KPI                                      | Status | Current  | Target   |
+| ---------------------------------------- | ------ | -------- | -------- |
+| GDPR data minimization enforcement       | 🟩     | 100%     | 100%     |
+| NIS2 / ISO 27001 control implementation  | 🟨     | 92%      | 100%     |
+| Centralized audit log retention          | 🟩     | 365 days | 365 days |
+| Certifications & access review adherence | 🟨     | 85%      | 100%     |
 
 
