Update 2.1.8 IAM Success Metrix.md

--- a/02. Phase 1 - Analysis and definition/2.1 Meeting n°1 : Project Charter framing and BRD draft meeting/2.1.8 IAM Success Metrix.md
+++ b/02. Phase 1 - Analysis and definition/2.1 Meeting n°1 : Project Charter framing and BRD draft meeting/2.1.8 IAM Success Metrix.md
@@ -86,12 +86,12 @@ This format facilitates:
 
 The dashboard below is based on the KPIs of the success matrix, but translates them into a visual format, classified into three statuses:
 
-🟩 On Track – target achieved or ahead of schedule
-🟨 At Risk – partial progress, risk identified
-🟥 Critical – off target, immediate action required
+- 🟩 On Track – target achieved or ahead of schedule
+- 🟨 At Risk – partial progress, risk identified
+- 🟥 Critical – off target, immediate action required
 
-
-### IAM Success metrics - Visual dashboard 
+___
+## IAM Success metrics - Visual dashboard 
 
 Legend :
 🟩 = ≥ 95% | 🟨 = 70–94% | 🟥 = <70%
